[tool.poetry]
name = "langservehub-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sse-starlette = "^1.6.5"
tomli-w = "^1.0.0"
uvicorn = "^0.23.2"
fastapi = "^0.104.0"
langserve = ">=0.0.16"
langchain-cli = "^0.0.15"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.23.2"
pygithub = "^2.1.1"
pirate-speak = { path = "packages/pirate-speak" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
